@@ -1,6 +1,7 @@
 Mini SQL Query Change Log
 =========================
 
+2009-07-06	ENH: Added the messages pane to the results, started to add providers (these are provider specific, just 'generic' and SqlClient for now).
 2009-07-01	ENH: Updated the dock panel suite.
 2009-07-01	ENH: Added better credits to the About Form.
 2009-06-30	ENH: addded "is dirty" checks to the connection string editor form
